[IIMAGE-10] Fix not found app config and improved client check
- fixed the message listener so that it should work on windows/google chrome
- adjusted the widget controller so that it returns a mapped error message if the content selected is from a site with no ImageShop app installed
- fix the client conditional for contents with no image fields found
- adjust translations and set the missing ones

--- a/src/main/resources/i18n/phrases.properties
+++ b/src/main/resources/i18n/phrases.properties
@@ -1,8 +1,9 @@
 iimage.widget.context_panel.display_name = ImageShop
 iimage.widget.context_panel.description = Search for images, edit and store them in Enonic
-iimage.widget.context_panel.fragments.app_installed_in_multiples_sites = You have more than 1 site with the IImage app installed. Choose one to start uploading images
-iimage.widget.context_panel.fragments.app_misconfigured = The IImage app is not configured properly. Please fill in the required fields in the IImage app settings
-iimage.widget.context_panel.fragments.app_not_installed = The IImage app is not installed.
+iimage.widget.context_panel.fragments.app_installed_in_multiples_sites = You have more than 1 site with the ImageShop app installed. Choose one to start uploading images
+iimage.widget.context_panel.fragments.app_misconfigured = The ImageShop app is not configured properly. Please fill in the required fields in the ImageShop app settings
+iimage.widget.context_panel.fragments.app_not_installed = The ImageShop app is not installed.
+iimage.widget.context_panel.fragments.app_not_installed_in_site_fetched = Ensure the content you selected is placed under a site with the ImageShop installed
 
 iimage.site.iimage_imported_resources_folder = Imported resources folder
 iimage.site.settings = ImageShop Settings
@@ -26,10 +27,10 @@ image.site.iimage_language_caption.help-text = Image caption name to be searched
 iimage.x-data.callback_url = Callback URL
 iimage.x-data.document_id = ImageShop ID
 
-iimage.service.import-image.no_site_with_iimage_app_installed = No site with the IImage app installed
+iimage.service.import-image.no_site_with_iimage_app_installed = No site with the ImageShop app installed
 iimage.service.import-image.no_folder_found = No imported image folder found
 iimage.service.import-image.image_imported_successfully = Image imported successfully
-iimage.service.image_import_failed = Error importing image
+iimage.service.import-image.image_import_failed = Error importing image
 
 iimage.fragments.general_error = An error occurred while importing the image. Please try again later.
 iimage.fragments.edit_image = Edit Image
