[hotfix] Fix key translations and message to no content selected
- adjusted wrong key names for some translations
- adjusted the controller to not throw errors if no content is selected while the widget is opened

--- a/src/main/resources/i18n/phrases.properties
+++ b/src/main/resources/i18n/phrases.properties
@@ -17,12 +17,12 @@ iimage.site.iimage_document_prefix.help-text = Standard document code prefix use
 iimage.site.iimage_sizes = Sizes
 iimage.site.iimage_sizes.help-text = Format: name;size. Example: Stor 640x480;640x480
 iimage.site.language = Language Settings
-image.site.iimage_language = Language
-image.site.iimage_language.help-text = Standard language to ge image information (alternative text and caption) from. Example: "no", "en", "nn" etc.
-image.site.iimage_language_alt_label = Alt-text name
-image.site.iimage_language_alt_label.help-text = Alternative text name to be searched in the ImagShop response
-image.site.iimage_language_caption = Image caption name
-image.site.iimage_language_caption.help-text = Image caption name to be searched in the ImagShop response
+iimage.site.iimage_language = Language
+iimage.site.iimage_language.help-text = Standard language to ge image information (alternative text and caption) from. Example: "no", "en", "nn" etc.
+iimage.site.iimage_language_alt_label = Alt-text name
+iimage.site.iimage_language_alt_label.help-text = Alternative text name to be searched in the ImagShop response
+iimage.site.iimage_language_caption = Image caption name
+iimage.site.iimage_language_caption.help-text = Image caption name to be searched in the ImagShop response
 
 iimage.x-data.callback_url = Callback URL
 iimage.x-data.document_id = ImageShop ID
