[SP-679] Implement upload feature for senterpartiet
- added token and private keys for upload feature
- rearranged the inputs to separate the download and upload feature inputs
- added a new upload button to the HTML widget and implement the client JS to the click event listener
- adjusted the widget controller to get the upload image shop URL, which is a screen enabled only to upload files
- adjusted the getImageShopURL function to receive a new object parameter allows specify configs for the desired URL, and also mapped the SHOWONLYUPLOAD query param to the upload URL
- adjusted the getTemporaryToken to get the upload values from cfg file or app config
- adjusted the gradle and readme with information about the custom fork

--- a/src/main/resources/i18n/phrases.properties
+++ b/src/main/resources/i18n/phrases.properties
@@ -4,9 +4,12 @@ iimage.widget.context_panel.fragments.app_installed_in_multiples_sites = You hav
 iimage.widget.context_panel.fragments.app_misconfigured = The ImageShop app is not configured properly. Please fill in the required fields in the ImageShop app settings
 iimage.widget.context_panel.fragments.app_not_installed = The ImageShop app is not installed.
 iimage.widget.context_panel.fragments.app_not_installed_in_site_fetched = Ensure the content you selected is placed under a site with the ImageShop installed
+iimage.widget.context_panel.fragments.no_content_selected = No content selected
 
 iimage.site.iimage_imported_resources_folder = Imported resources folder
 iimage.site.settings = ImageShop Settings
+iimage.site.settings.download = Download settings
+iimage.site.settings.upload = Upload settings
 iimage.site.iimage_host = Host
 iimage.site.iimage_token = Token
 iimage.site.iimage_private_key = Private Key
@@ -34,6 +37,7 @@ iimage.service.import-image.image_import_failed = Error importing image
 
 iimage.fragments.general_error = An error occurred while importing the image. Please try again later.
 iimage.fragments.edit_image = Edit Image
-iimage.fragments.open_image_shop = Browse
+iimage.fragments.open_image_shop = Insert from ImageShop
+iimage.fragments.upload_image = Upload new
 iimage.fragments.sync_image_info = Sync Info
 iimage.fragments.importing_image = Importing image...
