[SP-685] Fixes typo in i18n property key
- Corrects a typo in the i18n property key "iimage.fragments.open_image_shop", changing "ImageShop" to "Imageshop".

--- a/src/main/resources/i18n/phrases.properties
+++ b/src/main/resources/i18n/phrases.properties
@@ -37,7 +37,7 @@ iimage.service.import-image.image_import_failed = Error importing image
 
 iimage.fragments.general_error = An error occurred while importing the image. Please try again later.
 iimage.fragments.edit_image = Edit Image
-iimage.fragments.open_image_shop = Insert from ImageShop
+iimage.fragments.open_image_shop = Insert from Imageshop
 iimage.fragments.upload_image = Upload new
 iimage.fragments.sync_image_info = Sync Info
 iimage.fragments.importing_image = Importing image...
